[package]
name = "qstract"
version = "0.1.0"
edition = "2021"
authors = ["harmless-tech"]
description = "Extract tars"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cargo-prebuilt/qstract"
keywords = ["binary", "tar"]
#rust-version = "1.70"
include = [
    "src/",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
tar = "0.4.40"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.quick-build]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
