[package]
name = "qstract"
version = "0.2.9"
edition = "2024"
authors = ["harmless-tech"]
description = "A very basic tar/zip extraction program"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cargo-prebuilt/qstract"
categories = ["command-line-utilities"]
keywords = ["command-line-tool", "extract", "tar", "zip"]
rust-version = "1.85"
include = [
    "src/",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[dependencies]
anyhow = "1.0.100"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
hex = "0.4.3"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
rc-zip-sync = { version = "4.3.5", default-features = false, features = ["deflate", "deflate64"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
tar = "0.4.44"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
panic = "abort"
split-debuginfo = "off"

[profile.small]
inherits = "release"
opt-level = "s"

[profile.zmall]
inherits = "release"
opt-level = "z"

[profile.quick-build]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 16

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.zip"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"
